Varification with thefinal resutl done. Current column and raw highlighted

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="./js/games.js"></script>
     <script src="./js/sudoku.js"></script>
     <script src="./js/main.js"></script>
@@ -15,61 +20,61 @@
     <table>
       <tr class="top-border">
         <td class="left-border"></td>
-        <td></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
       </tr>
 
       <tr>
         <td class="left-border"></td>
-        <td></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
       </tr>
 
       <tr class="bottom-border">
         <td class="left-border"></td>
-        <td></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
-        <td class="right-border"></td>
-      </tr>
-
-      <tr>
-        <td class="left-border"></td>
-        <td></td>
-        <td class="right-border"></td>
-        <td></td>
-        <td></td>
-        <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
       </tr>
 
       <tr>
         <td class="left-border"></td>
-        <td></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
-        <td></td>
-        <td></td>
+        <td class=""></td>
+        <td class=""></td>
+        <td class="right-border"></td>
+      </tr>
+
+      <tr>
+        <td class="left-border"></td>
+        <td class=""></td>
+        <td class="right-border"></td>
+        <td class=""></td>
+        <td class=""></td>
+        <td class="right-border"></td>
+        <td class=""></td>
+        <td class=""></td>
         <td class="right-border"></td>
       </tr>
 
